# buildall

./: .gitignore  CMakeLists.txt  index.html  main.cpp  readme.markdown  readme.txt
